<resources>
    <!-- STRING PARA LOGIN -->
    <string name="app_name">MindPerformance</string>
    <string name="logo">Logo</string>
    <string name="loginmenu">LoginMenu</string>
    <string name="lblcorreo">Correo Electronico</string>
    <string name="lblcontraseña">Contraseña</string>
    <string name="hintcorreo">ejemplo@gmail.com</string>
    <string name="hintcontraseña">**********************************</string>
    <string name="lblolvidastecontraseña">¿Olvidaste tu contraseña?</string>
    <string name="btniniciarsesion">INICIAR SESIÓN</string>
    <string name="imgseparador">separador</string>
    <string name="btnfacebook">Facebook</string>
    <string name="btngoogle">Google</string>
    <string name="lblcuentanueva">¿No tienes cuenta? ¡CREA UNA!</string>
    <!-- STRING PARA DRAWER MENU-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="imgcurso">curso</string>
    <string name="title_activity_cursos_main">cursos_main</string>
    <!-- Strings user settings -->
    <string name="btnatras">atras</string>

    <string-array name="sexo_array">
        <item>Seleccionar</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="segundo_nombre">Segundo nombre:</string>
    <string name="jose">Jose</string>
    <string name="juan">Juan</string>
    <string name="primer_nombre">Primer nombre:</string>
    <string name="primer_apellido">Primer apellido:</string>
    <string name="gomez">Gomez</string>
    <string name="segundo_apellido">Segundo apellido:</string>
    <string name="avila">Avila</string>
    <string name="registrarse">Registrarse</string>
    <string name="n_mero_de_celular">Número de celular:</string>
    <string name="_928602031">928602031</string>
    <string name="title_activity_registrar_usuario2">RegistrarUsuario2</string>
    <string name="action_settings">Settings</string>
    <string name="registrate">REGISTRATE</string>
</resources>