<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logimenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/loginmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fondologin" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registrate"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logimenu" />

    <ImageView
        android:id="@+id/loginbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/loginmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/ic_box_logingrande" />

    <TextView
        android:id="@+id/lblcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/lblcorreo"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/ic_box"
        android:hint="@string/hintcorreo"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/grishint"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblcorreo" />

    <TextView
        android:id="@+id/lblcontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/lblcontraseña"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:background="@drawable/ic_box"
        android:hint="@string/hintcontraseña"
        android:inputType="textPassword"
        android:textColorHint="@color/grishint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblcontraseña" />

    <TextView
        android:id="@+id/lblnombre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/primer_nombre"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <EditText
        android:id="@+id/txt_nombre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:background="@drawable/ic_box"
        android:hint="@string/juan"
        android:inputType="text"
        android:textColorHint="@color/grishint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblnombre1" />

    <TextView
        android:id="@+id/lblnombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/segundo_nombre"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre1" />

    <EditText
        android:id="@+id/txt_nombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:background="@drawable/ic_box"
        android:hint="@string/jose"
        android:inputType="text"
        android:textColorHint="@color/grishint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblnombre2"/>

    <TextView
        android:id="@+id/lblapellido1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/primer_apellido"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre2" />

    <EditText
        android:id="@+id/txt_apellido1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:background="@drawable/ic_box"
        android:hint="@string/gomez"
        android:inputType="text"
        android:textColorHint="@color/grishint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblapellido1" />

    <TextView
        android:id="@+id/lblapellido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/segundo_apellido"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellido1" />

    <EditText
        android:id="@+id/txt_apellido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:background="@drawable/ic_box"
        android:hint="@string/avila"
        android:inputType="text"
        android:textColorHint="@color/grishint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblapellido2"/>

    <TextView
        android:id="@+id/lbltelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/n_mero_de_celular"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellido2" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:background="@drawable/ic_box"
        android:hint="@string/_928602031"
        android:inputType="number"
        android:textColorHint="@color/grishint"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lbltelefono"/>

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:text="Registrarme"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginbox"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefono"
        />
</androidx.constraintlayout.widget.ConstraintLayout>