<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logimenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/loginmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fondologin" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="149dp"
        android:layout_height="185dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logimenu"
        app:srcCompat="@drawable/logomain" />

    <ImageView
        android:id="@+id/loginbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/loginmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/ic_login" />

    <TextView
        android:id="@+id/lblcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/lblcorreo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/loginbox"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/ic_box"
        android:hint="@string/hintcorreo"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/grishint"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/loginbox"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblcorreo" />

    <TextView
        android:id="@+id/lblcontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/lblcontraseña"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/loginbox"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:background="@drawable/ic_box"
        android:hint="@string/hintcontraseña"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/grishint"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/loginbox"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblcontraseña" />

    <TextView
        android:id="@+id/lblolvidastecontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lblolvidastecontraseña"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/loginbox"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/btnlogin"
        android:text="@string/btniniciarsesion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginbox"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblolvidastecontraseña"
        />

    <ImageView
        android:id="@+id/lblor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imgseparador"
        app:layout_constraintEnd_toEndOf="@+id/loginbox"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:srcCompat="@drawable/ic_or" />

    <Button
        android:id="@+id/btn_facebook"
        style="@style/sinbordes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:backgroundTint="@color/trasparente"
        android:drawableTop="@drawable/facebook"
        android:elevation="0dp"
        android:text="@string/btnfacebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblor"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_google"
        style="@style/sinbordes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@null"
        android:backgroundTint="@color/trasparente"
        android:drawableTop="@drawable/google"
        android:elevation="0dp"
        android:text="@string/btngoogle"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/loginbox"
        app:layout_constraintTop_toBottomOf="@+id/lblor" />

    <TextView
        android:id="@+id/btn_registrarnuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblcuentanueva"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbox" />


</androidx.constraintlayout.widget.ConstraintLayout>