<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secundario"
    tools:context=".UserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways">

        <ImageView
            android:id="@+id/nav_header_user"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:contentDescription="@string/btnatras"
            android:src="@drawable/atras"
            app:layout_constraintStart_toStartOf="@+id/toolbar_user"
            app:layout_constraintTop_toTopOf="@+id/toolbar_user"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="USUARIO"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/box1"
        android:layout_width="wrap_content"
        android:layout_height="580dp"
        android:background="@drawable/ic_box_fill_cian"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_user"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/lblcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/lblcorreo"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toTopOf="@+id/box1" />

    <TextView
        android:id="@+id/lblnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Nombres"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/lblapellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="Apellidos"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/txtnombres" />


    <TextView
        android:id="@+id/lblcelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="Número de Celular"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sexo" />

    <TextView
        android:id="@+id/lblcorreo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Sexo"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/txtapellidos" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/ic_box"
        android:hint="@string/hintcorreo"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="eziodiamonds300nt@gmail.com"
        android:textColorHint="@color/grishint"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/lblcorreo" />

    <EditText
        android:id="@+id/txtnombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_box"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="Dumas Darwin"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/lblnombre" />

    <EditText
        android:id="@+id/txtapellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_box"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="Ponte Huamán"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/lblapellido" />

    <EditText
        android:id="@+id/txtcelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_box"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="928602031"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/lblcelular" />

    <Spinner
        android:id="@+id/spinner_sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/lblcorreo5" />

    <Button
        android:id="@+id/btnactualizarusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/btnlogin"
        android:text="ACTUALIZAR DATOS"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/box1"
        app:layout_constraintEnd_toEndOf="@+id/box1"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/txtcelular"
        app:layout_constraintVertical_bias="0.535" />


</androidx.constraintlayout.widget.ConstraintLayout>